Added login and sign up views

--- a/app/views/tenants/new_tenant.erb
+++ b/app/views/tenants/new_tenant.erb
@@ -1,1 +1,7 @@
-<p> hello world </p>
+<h3> Hello, new tenant! Please sign up below </h3>
+<form action="/singup" method="post">
+  <p>Name: <input type="text" name="username"></p>
+  <p>Email: <input type="text" name="email"></p>
+  <p>Password: <input type="text" name="password"></p>
+  <input class="btn btn-primary" type="submit">
+</form>
