Updated request form

--- a/app/views/requests/create_request.erb
+++ b/app/views/requests/create_request.erb
@@ -1,7 +1,13 @@
-<p>Please create a new request here</p>
+<p>Please create a new request below</p>
 
 <form action="/requests" method="post">
   <p>Enter:</p>
-  <input type="text" name="content">
+  <input type="text" name="apt_num" placeholder="Apartment Number">
+  <br>
+  <input type="text" name="date" placeholder="Today's date">
+  <br>
+  <input type="text" name="content" placeholder="Your request">
+  <br>
+  <br>
   <input class="btn btn-primary" type="submit" value="submit">
 </form>
