--- a/app/views/requests/requests.erb
+++ b/app/views/requests/requests.erb
@@ -5,5 +5,7 @@
 <%= request.content %>
 </div>
 <% end %>
-
+<br>
 <p>Create a new request <a href="/requests/new">Create Request</a></p>
+<br>
+<p><a href="/logout">Log Out</a></p>
