Added more details to requests.erb

--- a/app/views/requests/requests.erb
+++ b/app/views/requests/requests.erb
@@ -2,7 +2,11 @@
 
 <% @requests.each do |request|%>
 <div>
-<%= request.content %>
+
+    <%= request.content %>
+    <br>
+    <p>This request was created on <%= request.date %> for <%= request.apt_num %></p>
+    
 </div>
 <% end %>
 <br>
