changed params[] to params[:]

--- a/app/views/requests/requests.erb
+++ b/app/views/requests/requests.erb
@@ -5,8 +5,8 @@
 
     <%= request.content %>
     <br>
-    <p>This request was created on <%= request.date %> for <%= request.apt_num %></p>
-    
+    <p>This request was created on <%= request.date %> for apartment <%= request.apt_num %></p>
+
 </div>
 <% end %>
 <br>
