--- a/app/views/requests/show_requests.erb
+++ b/app/views/requests/show_requests.erb
@@ -1,10 +1,10 @@
-<p><%= @request.content %></p>
+<p><%= @ticket.content %></p>
 
 
-<form action="/requests/<%= @request.id %>/delete" method="post">
+<form action="/requests/<%= @ticket.id %>/delete" method="post">
   <input id = "hidden" type="hidden" name="_method" value="DELETE">
   <input type="submit" value="Delete Request">
 
 </form>
 
-<a href="/requests/<%=@request.id %>/edit">Edit Request</a>
+<a href="/requests/<%=@ticket.id %>/edit">Edit Request</a>
