Updated request controllers to allow only tenant specific requests to display

--- a/app/views/requests/requests.erb
+++ b/app/views/requests/requests.erb
@@ -3,9 +3,9 @@
 <% @requests.each do |request|%>
 <div>
 
-    <%= request.content %>
-    <br>
-    <p>This request was created on <%= request.date %> for apartment <%= request.apt_num %></p>
+
+
+    <p>Request: <%= request.content %>, was created on <%= request.date %> for apartment <%= request.apt_num %></p>
 
 </div>
 <% end %>
