--- a/app/views/tenants/login.erb
+++ b/app/views/tenants/login.erb
@@ -5,3 +5,6 @@
 
   <input type="submit" value="submit">
 </form>
+
+<br>
+<a href="/signup">New user? Sign up</a> or go back to <a href="/">Home</a>
