--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -10,6 +10,7 @@
 
   <p>Welcome, <%=current_tenant.username %></p>
     <a href="/requests/new"> Create Request </a> <br>
+    <a href="/requests">All Requests</a> <br>
     <a href="/logout"> Log Out </a>
 
 
