--- a/app/views/tenants/login.erb
+++ b/app/views/tenants/login.erb
@@ -1,7 +1,7 @@
 <h3>Hello, existing tenant! Please log in below</h3>
 <form action="/login" method="post">
   <input type="text" name="username" placeholder="Username:">
-  <input type="text" name="password" placeholder="Password:">
+  <input type="password" name="password" placeholder="Password:">
 
   <input type="submit" value="submit">
 </form>
