--- a/app/views/tenants/new_tenant.erb
+++ b/app/views/tenants/new_tenant.erb
@@ -2,6 +2,6 @@
 <form action="/signup" method="post">
   <p>Name: <input type="text" name="username"></p>
   <p>Email: <input type="text" name="email"></p>
-  <p>Password: <input type="text" name="password"></p>
+  <p>Password: <input type="password" name="password"></p>
   <input class="btn btn-primary" type="submit">
 </form>
