--- a/app/views/requests/requests.erb
+++ b/app/views/requests/requests.erb
@@ -5,7 +5,7 @@
 
 
 
-    <p>Request: <%= request.content %>, was created on <%= request.date %> for apartment <%= request.apt_num %></p>
+    <p>Request: "<%= request.content %>", was created on <%= request.date %> for apartment <%= request.apt_num %></p>
 
 </div>
 <% end %>
