--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -1,6 +1,6 @@
-<h1>Welcome to Columbia Plaza Apartments!</h1>
+<h1>Welcome to KeepTrack - CP Apartments's online service request-tracking portal!</h1>
 <br>
-<h4>We are committed to making your stay as comfortable as possible. Please follow the instructions below to enter a service request </h4>
+<h5>We are committed to making your stay as comfortable as possible. Please follow the instructions below to enter a service request </h5>
 <br>
 
 
